force-app/main/default/objects/Alternate_Plan_Mapping__c.object
<CustomObject>
    <description>Straight and alternate plans for auto-renewals</description>
    <fields>
        <fullName>Alternate_Package_Code__c</fullName>
        <label>Alternate Package Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Plan_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Alternate Plan Family</description>
        <label>Alternate Plan Family</label>
        <referenceTo>Plan_Family__c</referenceTo>
        <relationshipLabel>Alternate Plan Mapping</relationshipLabel>
        <relationshipName>Alternate_Plan_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_To__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mapping_Type__c</fullName>
        <label>Mapping Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Straight Renewal</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <label>Package Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Family</label>
        <referenceTo>Plan_Family__c</referenceTo>
        <relationshipLabel>Alternate Plan Mapping</relationshipLabel>
        <relationshipName>Current_Plan_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Alternate Plan Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Alternate_Plan_Mappings</fullName>
        <columns>NAME</columns>
        <columns>Plan_Family__c</columns>
        <columns>Package_Code__c</columns>
        <columns>Alternate_Plan_Family__c</columns>
        <columns>Alternate_Package_Code__c</columns>
        <columns>Mapping_Type__c</columns>
        <columns>Effective_From__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Alternate Plan Mappings</label>
    </listViews>
    <nameField>
        <displayFormat>PLN-{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alternate Plan Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>