force-app/main/default/objects/Alternate_Plan_Mapping__c/listViews/All_Alternate_Plan_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Alternate_Plan_Mappings</fullName>
    <columns>NAME</columns>
    <columns>Plan_Family__c</columns>
    <columns>Package_Code__c</columns>
    <columns>Alternate_Plan_Family__c</columns>
    <columns>Alternate_Package_Code__c</columns>
    <columns>Mapping_Type__c</columns>
    <columns>Effective_From__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Alternate Plan Mappings</label>
</ListView>